update user manual

--- a/README
+++ b/README
@@ -8,12 +8,34 @@ To install this module, run the following commands:
 
 	sudo ./install.sh
 
+SAMPLE USAGE
+
+The sample command to add new variant frequency from the input in vcf format into the database
+
+	./bin/bvd-add.pl -d example/sample_DB example/sample_input.vcf
+
+The sample command to retrieve the variant frequency
+
+	./bin/bvd-get.pl -d example/sample_DB
+
+Please note that the database that was used in the above commands, 'example/sample_DB', is for tutorial purpose only.
+Practically, you can insert variant into the database by only
+
+	./bin/bvd-add.pl your_input.vcf
+
+and can retrieve the variant frequency by only
+
+	./bin/bvd-get.pl
+
 SUPPORT AND DOCUMENTATION
 
-After installing, you can find documentation for this module with the
-perldoc command.
+After installing, you can find more information about this these tools in 
 
-    perldoc Bvdb
+	hbvdb-tools.pdf
+
+and you can find the library documentation at for this module by using perldoc command.
+
+	perldoc Bvdb
 
 LICENSE AND COPYRIGHT
 
